
= raabro CHANGELOG.txt


== raabro 1.1.3  not yet released

- add "tears" to Raabro.pp


== raabro 1.1.2  released 2016-04-04

- add Raabro.pp(tree)


== raabro 1.1.1  released 2016-04-03

- Tree#clast


== raabro 1.1.0  released 2016-02-09

- many improvements
- unlock custom `rewrite(t)`


== raabro 1.0.5  released 2015-09-25

- allow for .parse(s, debug: 1 to 3)
- drop complications in _narrow(parser)


== raabro 1.0.4  released 2015-09-24

- provide a default .rewrite implementation


== raabro 1.0.3  released 2015-09-23

- drop the shrink! concept


== raabro 1.0.2  released 2015-09-23

- don't let parse() shrink tree when prune: false
- let parse() return tree anyway when prune: false
- add parse(s, rewrite: false) option


== raabro 1.0.1  released 2015-09-23

- take last parser as default :root
- provide default .parse for modules including Raabro


== raabro 1.0.0  released 2015-09-23

- first complete (hopefully) release


== raabro 0.9.0

- initial push to RubyGems
